--- a/portality/templates/leaps/admin/student.html
+++ b/portality/templates/leaps/admin/student.html
@@ -516,6 +516,7 @@ fieldset{
                         <th>College / University</th>
                         <th>Subject</th>
                         <th>Level of study</th>
+                        <th>PAE replied / view</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -550,7 +551,9 @@ fieldset{
                     		</select>
                 		</td>
                 		<td>
-                    		<a target="_blank" class="btn" href="/universities/pae/{{app.appid}}">PAE &raquo;</a>
+                		    <input type="hidden" name="application_appid" value="{{app.appid}}">
+                		    <span style="margin:5px 5px 0 5px;">{{ app.pae_reply_received }}</span>
+                    		<a target="_blank" class="btn" href="/universities/pae/{{app.appid}}">View &raquo;</a>
                 		</td>
                     </tr>
                         {% endfor %}
@@ -575,6 +578,7 @@ fieldset{
                 		        <option>{{ opt }}</option>
                 		    {% endfor %}
                 		</select></td>
+                		<td></td>
                     </tr>
                 </tbody>
 	        </table>
@@ -805,7 +809,7 @@ fieldset{
 
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Mothers occupation</td>
-	                    <td><input name="mothers_occupation"{% if record %} value="{{ record.data.mothers_occupation }}"{% endif %}></td>
+	                    <td><input type="text" name="mothers_occupation"{% if record %} value="{{ record.data.mothers_occupation }}"{% endif %}></td>
 
                 		<td rowspan="2"><input type="checkbox" name="hn_only_candidate"
                 		{% if record %}{% if record.data.hn_only_candidate %} checked="checked"{% endif %}{% endif %}
@@ -819,7 +823,7 @@ fieldset{
                     </tr>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Fathers occupation</td>
-	                    <td><input name="fathers_occupation"{% if record %} value="{{ record.data.fathers_occupation }}"{% endif %}></td>
+	                    <td><input type="text" name="fathers_occupation"{% if record %} value="{{ record.data.fathers_occupation }}"{% endif %}></td>
 
                     </tr>
         	        <tr>
@@ -845,7 +849,7 @@ fieldset{
                     </tr>
         	        <tr>
 	                    <td style="text-align:right;padding:6px 10px 0 0;">Main language at home</td>
-	                    <td><input name="main_language_at_home"{% if record %} value="{{ record.data.main_language_at_home }}"{% endif %}></td>
+	                    <td><input type="text" name="main_language_at_home"{% if record %} value="{{ record.data.main_language_at_home }}"{% endif %}></td>
 
                     </tr>
                 </tbody>
