--- a/portality/templates/leaps/universities/index.html
+++ b/portality/templates/leaps/universities/index.html
@@ -13,7 +13,7 @@ jQuery(document).ready(function() {
     <div class="row-fluid">
         <div class="span12">
             <p style="text-align:right;">
-                <a class="btn btn-primary" href="/universities/export/{{institution}}">Export</a>
+                <a class="btn btn-primary" href="/universities/export">Export</a>
                 <a class="btn" href="/account/logout">Logout</a>
             </p>
         </div>
