Updating the new row code to not copy answers and to reset datepickers. Adding status processing. Adding filter on university pages to only show students for whom status has passed through one of the PAE types.

--- a/portality/templates/leaps/admin/data.html
+++ b/portality/templates/leaps/admin/data.html
@@ -28,7 +28,7 @@ jQuery(document).ready(function($) {
             resdisplay: [
                 [
                     {
-                        "pre": '<a href="data/school/',
+                        "pre": '<a href="/admin/data/school/',
                         "field": "id",
                         "post": '">'
                     },
@@ -49,7 +49,7 @@ jQuery(document).ready(function($) {
         resdisplay: [
                 [
                     {
-                        "pre": '<a href="data/institution/',
+                        "pre": '<a href="/admin/data/institution/',
                         "field": "id",
                         "post": '">'
                     },
@@ -68,7 +68,7 @@ jQuery(document).ready(function($) {
         resdisplay: [
                 [
                     {
-                        "pre": '<a href="data/level/',
+                        "pre": '<a href="/admin/data/level/',
                         "field": "id",
                         "post": '">'
                     },
@@ -87,7 +87,7 @@ jQuery(document).ready(function($) {
         resdisplay: [
                 [
                     {
-                        "pre": '<a href="data/advancedlevel/',
+                        "pre": '<a href="/admin/data/advancedlevel/',
                         "field": "id",
                         "post": '">'
                     },
@@ -106,7 +106,7 @@ jQuery(document).ready(function($) {
         resdisplay: [
                 [
                     {
-                        "pre": '<a href="data/subject/',
+                        "pre": '<a href="/admin/data/subject/',
                         "field": "id",
                         "post": '">'
                     },
@@ -125,7 +125,7 @@ jQuery(document).ready(function($) {
         resdisplay: [
                 [
                     {
-                        "pre": '<a href="data/grade/',
+                        "pre": '<a href="/admin/data/grade/',
                         "field": "id",
                         "post": '">'
                     },
@@ -144,7 +144,7 @@ jQuery(document).ready(function($) {
         resdisplay: [
                 [
                     {
-                        "pre": '<a href="data/simd/',
+                        "pre": '<a href="/admin/data/simd/',
                         "field": "id",
                         "post": '">'
                     },
