--- a/portality/templates/leaps/survey/survey.html
+++ b/portality/templates/leaps/survey/survey.html
@@ -53,23 +53,41 @@ jQuery(document).ready(function() {
     });
     $('table.multi').find('tbody').append('<tr><td><a class="btn btn-success add-row" href="#">add</a></td></tr>');
 
+
     var addrow = function(event) {
         event.preventDefault();
         $(this).closest('tr').siblings().length == 5 ? $(this).hide() : false;
         if ( $(this).closest('tr').siblings().length < 6 ) {
             var row = $(this).closest('tr').prev().clone(true).get(0);
+            $(row).find('.noclone').remove();
             $(row).insertBefore($(this).closest('tr'));
             $(row).find('.delete-row').bind('click',deleterow);
+            $(row).find('select').val("");
+            $(row).find('input').val("");
+            $(row).find('textarea').html("");
+            $(row).find('.datepicker').datepicker("destroy");
+            $(row).find('.datepicker').removeClass("hasDatepicker").removeAttr('id');
+            $(row).find('.datepicker').datepicker(opts);
         }
     }
+    $('.add-row').bind('click',addrow);
     var deleterow = function(event) {
         event.preventDefault();
         var row = $(this).closest('tr').clone(true).get(0);
         $(this).closest('tr').siblings().length == 6 ? $(this).closest('tr').siblings().find('.add-row').show() : false;
-        $(this).closest('tr').siblings().length == 1 ? $(row).insertBefore($(this).closest('tr')) : false;
+        if ( $(this).closest('tr').siblings().length == 1 ) {
+            $(row).find('.noclone').remove();
+            $(row).insertBefore($(this).closest('tr'));
+            $(row).find('.delete-row').bind('click',deleterow);
+            $(row).find('select').val("");
+            $(row).find('input').val("");
+            $(row).find('textarea').html("");
+            $(row).find('.datepicker').datepicker("destroy");
+            $(row).find('.datepicker').removeClass("hasDatepicker").removeAttr('id');
+            $(row).find('.datepicker').datepicker(opts);
+        }
         $(this).closest('tr').remove();
     }
-    $('.add-row').bind('click',addrow);
     $('.delete-row').bind('click',deleterow);
 
     var triggersave = function(event) {
@@ -441,7 +459,8 @@ input.bigfield{
                 <thead>
                     <tr>
                         <th>Date from</th>
-                        <th>Date to</th>
+                        <th>Date to
+                        <br><span style="font-weight:normal;font-size:10px;">leave blank if ongoing</span></th>
                         <th>Job title</th>
                         <th>Brief Description</th>
                     </tr>
@@ -449,7 +468,7 @@ input.bigfield{
                 <tbody>
                     <tr>
                 		<td><input type="text" class="datepicker narrow" name="experience_date_from"></td>
-                		<td><input type="text" class="datepicker narrow" name="experience_date_to"></td>
+                		<td><input type="text" class="datepicker narrow" name="experience_date_to" placeholder="unless ongoing"></td>
                 		<td><input type="text" class="narrow" name="experience_title"></td>
                 		<td><textarea class="bigfield" name="experience_brief_description" data-maxwords="200" data-trigger="keyup focusout change"></textarea></td>
                     </tr>
