finishing functionality to support unique subject lists for particular universities, and methods to keep them up to date. also finishing PAE and student record printing. Email hooks in place, requires discussion of process before wiring up though.

--- a/portality/static/css/leaps.css
+++ b/portality/static/css/leaps.css
@@ -101,7 +101,7 @@ body {
 #container{
 	width:900px;
 	margin:20px auto 50px auto;
-	padding:0 10px 10px 10px;
+	padding:10px;
 	background:#ffffff;
     -moz-border-radius: 15px;
     border-radius: 15px;
