--- a/portality/templates/leaps/admin/index.html
+++ b/portality/templates/leaps/admin/index.html
@@ -5,22 +5,22 @@
 <div class="row-fluid">
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.total_submitted}}</span> students<br> have submitted surveys <br>(not including archives).</p>
+            <p><span style="font-size:24px;">{{stats.total_submitted}}</span> students<br> have submitted surveys <br><br>(these figures are for records in the current archive).</p>
         </div>
     </div>
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.awaiting_interview}}XX</span> students<br> are awaiting interview.</p>
+            <p><span style="font-size:24px;">{{stats.awaiting_interview}}</span> students<br> are awaiting interview.</p>
         </div>
     </div>
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.interviewed}}XX</span> students<br> have been interviewed.</p>
+            <p><span style="font-size:24px;">{{stats.interviewed}}</span> students<br> have been interviewed.</p>
         </div>
     </div>
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.paes_forwarded}}XX</span> students<br> have had their PAE responses sent to them.</p>
+            <p><span style="font-size:24px;">{{stats.paes_forwarded}}</span> students<br> have had their PAE responses sent to them.</p>
         </div>
     </div>
 </div>    
@@ -28,22 +28,24 @@
 <div class="row-fluid">
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.no_pae_requested}}XX</span> student records<br> are not getting PAEs requested.</p>
+            <p><span style="font-size:24px;">{{stats.awaiting_all_pae}}</span> of the students<br>for which PAEs are expected are awaiting <strong>all</strong> PAE responses.</p>
         </div>
     </div>
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.awaiting_all_pae}}XX</span> student records<br> are awaiting <strong>all</strong> their PAE responses.</p>
+            <p><span style="font-size:24px;">{{stats.awaiting_some_pae}}</span> of the students<br> for which PAEs are expected are awaiting <strong>some</strong> PAE responses.</p>
         </div>
     </div>
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.awaiting_some_pae}}XX</span> student records<br> are awaiting <strong>some</strong> PAE responses.</p>
+            <p><span style="font-size:24px;">{{stats.all_pae_received}}</span> of the students<br> for which PAEs are expected have had all PAE responses submitted.</p>
         </div>
     </div>
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.all_pae_received}}XX</span> student records<br> have had all PAE responses submitted.</p>
+            <p><span style="font-size:24px;">{{stats.schools_with_students_submitted}}</span> of the 
+            <span style="font-size:24px;">{{stats.total_schools}}</span> 
+            <br>registered schools have had students submit surveys.</p>
         </div>
     </div>
 </div>
@@ -51,14 +53,7 @@
 <div class="row-fluid">
     <div class="span3">
         <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.schools_with_students_submitted}}XX</span> of the 
-            <span style="font-size:24px;">{{stats.total_schools}}XX</span> 
-            <br>registered schools have had students submit surveys.</p>
-        </div>
-    </div>
-    <div class="span3">
-        <div class="alert alert-info" style="min-height:100px;">
-            <p><span style="font-size:24px;">{{stats.universities_pae_outstanding}}XX</span> universities<br> have PAE requests outstanding.</p>
+            <p><span style="font-size:24px;">{{stats.universities_pae_outstanding}}</span> universities<br> have PAE requests outstanding.</p>
         </div>
     </div>
 </div>
