--- a/portality/templates/leaps/admin/import.html
+++ b/portality/templates/leaps/admin/import.html
@@ -32,7 +32,17 @@ jQuery(document).ready(function() {
         <p>You have chosen to upload some records into the {{ model }} dataset.</p>
         <p>Your upload file must be a comma separated value list (.csv) &mdash; software such as MS Excel can save spreadsheets as this type &mdash; or a JSON file.</p>
 
-        <form action="" method="post" enctype="multipart/form-data">
+        <form action="" method="POST" enctype="multipart/form-data">
+        {% if subjects %}
+        <p><select name="institution">
+            <option></option>
+            {% for subject in subjects %}
+            <option>{{subject}}</option>
+            {% endfor %}
+        </select> Choose the institution to upload these subjects to (deletes any other subjects for that institution).</p>
+        {% else %}
+        <p><input type="checkbox" name="deleteall"> Check this box if you wish to remove all current data before importing the new data.</p>
+        {% endif %}
         <p><input type="file" name="upfile"></p>
         <p><input class="btn" type="submit" name="submit" value="Import" /></p>
         </form>
